# flucoma-sc

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  QuickStart.md  README.md  bufstatsmusiceg.scd  fdNMF.cpp  fdfNMF.sc  fluid_nmf_tilde_util.h  schelp2yaml.scd  tb2bufloudnesshorror.scd  tb2bundle.scd  ted_helpfiles_outline.md  tests.scd
.github/workflows/: feature.yml  nightly.yaml  release.yml
fdBufferExperiments/: fdBufferExperiments.cpp  tests.scd
fdCompose/: fdCompose.cpp
fdGain/: CMakeLists.txt  fdGain.cpp
fdNMF/: CMakeLists.txt  fdNMF.cpp  tests.scd
fdNRTBase/: CMakeLists.txt  fdNRTBase.cpp
fdSTFTPass/: CMakeLists.txt  fdSTFTPass.cpp
fdTransients/: CMakeLists.txt  fdTransients.cpp  tests.scd
include/: FluidSCWrapper.hpp  SCBufferAdaptor.hpp  fdNRTBase.hpp
include/wrapper/: ArgsFromClient.hpp  ArgsToClient.hpp  BufferFuncs.hpp  CopyReplyAddress.cpp  CopyReplyAddress.hpp  DeriveBaseClass.hpp  Messaging.hpp  Meta.hpp  NonRealtime.hpp  RealTimeBase.hpp  Realtime.hpp  SCWorldAllocator.hpp
linuxbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
release-packaging/Classes/: FDCompose.sc  FDHPSS.sc  FluidAmpFeature.sc  FluidAmpGate.sc  FluidAmpSlice.sc  FluidAudioTransport.sc  FluidBufAmpCurve.sc  FluidBufAmpFeature.sc  FluidBufAmpGate.sc  FluidBufAmpSlice.sc  FluidBufAudioTransport.sc  FluidBufChroma.sc  FluidBufCompose.sc  FluidBufExperiments.sc  FluidBufFlatten.sc  FluidBufHPSS.sc  FluidBufLoudness.sc  FluidBufMFCC.sc  FluidBufMelBands.sc  FluidBufNMF.sc  FluidBufNMFCross.sc  FluidBufNMFSeed.sc  FluidBufNNDSVD.sc  FluidBufNoveltyFeature.sc  FluidBufNoveltySlice.sc  FluidBufOnsetFeature.sc  FluidBufOnsetSlice.sc  FluidBufPitch.sc  FluidBufRTNoveltySlice.sc  FluidBufSTFT.sc  FluidBufScale.sc  FluidBufSelect.sc  FluidBufSelectEvery.sc  FluidBufShingle.sc  FluidBufSineFeature.sc  FluidBufSines.sc  FluidBufSpectralShape.sc  FluidBufStats.sc  FluidBufThreadDemo.sc  FluidBufThresh.sc  (+74 more)
release-packaging/Examples/: nb_of_slices.scd
release-packaging/classes/: fdGain.sc  fdNMF.sc  fdSTFTPass.sc
sc-resources/: bufToKrExample.json
scripts/: MakeDevTree.cmake  MakePluginSources.cmake  target_post.cmake
scripts/settings/: FluidManipulation.cmake  FluidManipulation.cpp.in
src/FluidAmpFeature/: FluidAmpFeature.cpp
src/FluidAmpGate/: FluidAmpGate.cpp  FluidAmpSlice.cpp
src/FluidAmpSlice/: FluidAmpSlice.cpp
src/FluidAudioTransport/: FluidAudioTransport.cpp
src/FluidBufAmpCurve/: FluidBufAmpCurve.cpp
src/FluidBufAmpFeature/: FluidBufAmpFeature.cpp
src/FluidBufAmpGate/: FluidBufAmpGate.cpp
src/FluidBufAmpSlice/: FluidBufAmpSlice.cpp
src/FluidBufAudioTransport/: FluidBufAudioTransport.cpp  test.scd
src/FluidBufChroma/: FluidBufChroma.cpp
src/FluidBufCompose/: FluidBufCompose.cpp  tests.scd
src/FluidBufExperiements/: FluidBufExperiements.cpp  tests.scd
src/FluidBufFlatten/: FluidBufFlatten.cpp
src/FluidBufHPSS/: CMakeLists.txt  FluidBufHPSS.cpp  tests.scd
src/FluidBufLoudness/: FluidBufLoudness.cpp
src/FluidBufMFCC/: FluidBufMFCC.cpp
src/FluidBufMelBands/: FluidBufMelBands.cpp
src/FluidBufNMF/: FluidBufNMF.cpp  tests.scd
src/FluidBufNNDSVD/: CMakeLists.txt  FluidBufNNDSVD.cpp
src/FluidBufNoveltyCurve/: FluidBufNoveltyCurve.cpp
src/FluidBufNoveltyFeature/: FluidBufNoveltyFeature.cpp
src/FluidBufNoveltySlice/: FluidBufNoveltySlice.cpp  tests.scd
src/FluidBufOnsetFeature/: FluidBufOnsetFeature.cpp
src/FluidBufOnsetSlice/: FluidBufOnsetSlice.cpp
src/FluidBufPitch/: FluidBufPitch.cpp
src/FluidBufRTNoveltySlice/: FluidBufRTNoveltySlice.cpp
src/FluidBufSTFT/: FluidBufSTFT.cpp
src/FluidBufScale/: FluidBufScale.cpp
src/FluidBufSelect/: FluidBufSelect.cpp
src/FluidBufSelectEvery/: FluidBufSelectEvery.cpp
src/FluidBufShingle/: FluidBufShingle.cpp
src/FluidBufSines/: FluidBufSines.cpp  tests.scd
src/FluidBufSpectralShape/: FluidBufSpectralShape.cpp
src/FluidBufStats/: FluidBufStats.cpp
src/FluidBufThreadDemo/: FluidBufThreadDemo.cpp
src/FluidBufThresh/: FluidBufThresh.cpp
src/FluidBufTransientSlice/: FluidBufTransientSlice.cpp  tests.scd
src/FluidBufTransients/: FluidBufTransients.cpp  tests.scd
src/FluidChroma/: FluidChroma.cpp
src/FluidConcat/: CMakeLists.txt  FluidConcat.cpp
src/FluidETC/: FluidETC.cpp
src/FluidGain/: CMakeLists.txt  FluidGain.cpp
src/FluidHPSS/: FluidHPSS.cpp  test.scd
src/FluidLoudness/: FluidLoudness.cpp
src/FluidMFCC/: FluidMFCC.cpp
src/FluidManipulation/: CMakeLists.txt  FluidManipulation.cpp
src/FluidMelBands/: FluidMelBands.cpp
src/FluidMessageTest/: FluidMessageTest.cpp
src/FluidNMFCross/: FluidNMFCross.cpp
src/FluidNMFFilter/: FluidNMFFilter.cpp
src/FluidNMFMatch/: CMakeLists.txt  FluidNMFMatch.cpp  test.scd  test2.scd
src/FluidNMFMorph/: FluidNMFMorph.cpp
src/FluidNoveltyCurve/: FluidNoveltyCurve.cpp
src/FluidNoveltyFeature/: FluidNoveltyFeature.cpp
src/FluidNoveltySlice/: FluidNoveltySlice.cpp
src/FluidOnsetCurve/: FluidOnsetCurve.cpp
src/FluidOnsetFeature/: FluidOnsetFeature.cpp
src/FluidOnsetSlice/: FluidOnsetSlice.cpp
src/FluidPitch/: CMakeLists.txt  FluidPitch.cpp
src/FluidRTNoveltySlice/: FluidRTNoveltySlice.cpp
src/FluidSTFTPass/: CMakeLists.txt  FluidSTFTPass.cpp
src/FluidShannonEntropy/: FluidShannonEntropy.cpp
src/FluidSines/: FluidSines.cpp  test.scd
src/FluidSliceTransients/: FluidSliceTransients.cpp
src/FluidSpectralShape/: FluidSpectralShape.cpp
src/FluidStats/: FluidStats.cpp
test/: 10a-weighted-MFCCs-comparison.scd  10b-weighted-pitch-comparison.scd  12-windowed-clustered-segmentation.scd  13-massive-parallelisation-example.scd  8b-mlp-synth-control.scd  8c-mlp-regressor-as-dim-redux.scd  FluidBufToKr test.scd  FluidFilesPath_test.scd  FluidPlotter_test.scd  FluidWaveform raster scratch paper.scd  FluidWaveform spectrogram scratch paper.scd  FluidWaveform_test.scd  PCA_inverse_test.scd  TestFluidManipulationLifecyle.sc  overlay.scd  test-fluidmanipulation-lifecycle.scd
tests/: TestFluiSubscriberProvider.scd  TestFluidMessageTest..scd
(+286 files in other folders)
